--- a/views/userView/signup.ejs
+++ b/views/userView/signup.ejs
@@ -92,6 +92,11 @@
                 <div class="card-body p-5 text-center">
       
                     <div class="mb-md-5 mt-md-4 pb-4">
+                        <span id="submit-error"></span><br><p>
+                            <% if(error){ %>
+                         <p id="alreadyUser" style="color: red;"><%=error%></p> 
+                           <%} %>
+                        </p>
 
                       <form action="/signup" method="post">
                         <h2 class="fw-bold mb-2 ">Sign Up</h2>
@@ -227,6 +232,12 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/main.js"></script>
+
+    <script>
+        setTimeout(()=>{
+          let a=document.getElementById("alreadyUser");
+        },2000)
+        </script>
 </body>
 
 </html>
