--- a/views/userView/signup.ejs
+++ b/views/userView/signup.ejs
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 
 <body>
@@ -123,8 +124,10 @@
                           </div>
         
                         <div class="form-outline form-white mb-4">
-                        <input type="password" placeholder="Password" id="typePasswordX" name="password" class="form-control form-control-lg" />
+                        <input type="password" placeholder="Password" id="id_password" name="password" style="position:absolute; width: 78%;" class="form-control form-control-lg" />
+                        <i class="far fa-eye showpass" id="togglePassword" ></i>
                         </div>
+                        <br>
                         <button class="btn btn-outline-light btn-lg px-5" type="submit">Register</button>
                          <div>
                           <br>
@@ -237,6 +240,20 @@
         setTimeout(()=>{
           let a=document.getElementById("alreadyUser");
         },2000)
+        </script>
+        <script>
+
+        const togglePassword = document.querySelector('#togglePassword');
+
+        const password = document.querySelector('#id_password');
+
+        togglePassword.addEventListener('click', function (e) {
+            // toggle the type attribute
+            const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+            password.setAttribute('type', type);
+            // toggle the eye slash icon
+            this.classList.toggle('fa-eye-slash');
+        });
         </script>
 </body>
 
