--- a/views/adminView/dashboard.ejs
+++ b/views/adminView/dashboard.ejs
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admiin Dashboard</title>
-</head>
-<body>
+        <%- include ('adminHeader') %>
 
-    <h1>Admiin Dashboard</h1>
-    <a href="/admin/adminLogout">Logout</a>
-    
-</body>
-</html>
+
+        <section class="content-main">
+
+
+             
+        </section> <!-- content-main end// -->
+
+
+        <%- include ('adminFooter') %>
+       
