--- a/views/adminView/user_Management.ejs
+++ b/views/adminView/user_Management.ejs
@@ -10,9 +10,11 @@
     </div>
     <header class="card card-body mb-4">
       <div class="row gx-3">
+        <form class="d-flex" role="search" method="post" >
         <div class="col-lg-4 col-md-6 me-auto">
-          <input type="text" placeholder="Search..." class="form-control" />
+          <input type="search" placeholder="Search..." class="form-control" name="search" value="<%= nameSearch %>"/>
         </div>
+        </form>
     </div>
     </header>
   </div>
@@ -36,10 +38,13 @@
                 <td style="text-align: center;"><%=u.mobile%> </td>
                 </td>                
                 <td style="text-align: center;">
-                  <form action="">
-                    <input type="hidden" name="username" value=""/>
-                    <button style="background-color:rgb(255, 47, 47); border-radius: 6px; border: none;" type="button" id="<%#=c._id %>" onclick="toggleFunction()" >Block</button>
-                  </form>
+                  <a href="/admin/block/<%=u.username %>">
+                    <% if (u.status){ %>
+                    <button class="btn btn-success">Un Block</button>
+                    <% }else{ %>
+                    <button class="btn btn-danger">Block</button>
+                    <% } %>
+                  </a>
                 </td>
               </tr>
               <% } %>
