--- a/views/adminView/adminHeader.ejs
+++ b/views/adminView/adminHeader.ejs
@@ -38,7 +38,7 @@
                     </a>
                 </li> -->
                 <li class="menu-item">
-                    <a class="menu-link" href="page-products-list.html"> <i class="icon material-icons md-shopping_bag"></i>
+                    <a class="menu-link" href="./product"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Products</span>
                     </a>
                 </li>
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="page-orders-1.html"> <i class="icon material-icons md-category"></i>
+                    <a class="menu-link" href="./category"> <i class="icon material-icons md-category"></i>
                         <span class="text">category</span>
                     </a>
                 </li>
