--- a/views/adminView/productManagement.ejs
+++ b/views/adminView/productManagement.ejs
@@ -42,8 +42,6 @@
                <% for(let p of product) { %>
               <tr>
                 <td style="text-align: center;"><img src="<%= p.image[0] %>" style="padding:15%;" height="100px" width="100px" >  </td>
-                <!-- <p>"<%= p.image[0] %>"</p> -->
-                <!-- <img src="../upload/1708416844295-03_Black_Suit1_2023_0491_2812x3750_ed7f25d4-87c0-4b57-a0e0-56798c465d63.webp" alt="image not found"> -->
                 <td style="text-align: center;"><%=p.name %></td>
                 <td style="text-align: center;"><%=p.category %> </td>
                 <td style="text-align: center;">₹<%=p.rate %></td> 
@@ -60,7 +58,7 @@
                     
                   </form>
                 </td>
-                <td style="text-align: center;"> <% if(!p.hide){ %><button style="background-color:coral;"  type="button"
+                <td style="text-align: center;"> <% if(!p.hide){ %><button style="background-color:rgb(180, 77, 77);"  type="button"
                   id="<%=p._id %>"
                   onclick="toggleFunction('<%=p._id %>')"
                 >
