product management user sof delete

--- a/views/adminView/adminProductAdd.ejs
+++ b/views/adminView/adminProductAdd.ejs
@@ -50,7 +50,7 @@
 </div>
 <br><br>
 <button type="submit" class="btn btn-primary" onclick="myFunction()">Save it</button>
-<a style="margin:20%; color: red;" href="/admin/product">Go Back</a>
+<a style="margin-left:40%" href="/admin/product" class="btn btn-danger">Go Back</a>
 </form>
 <p id="demo"></p>
 </div>
