--- a/views/adminView/adminProductEdit.ejs
+++ b/views/adminView/adminProductEdit.ejs
@@ -163,7 +163,7 @@
                 <button type="submit" class="btn btn-primary btn-block">
                   Update
                 </button>
-                <a style="margin-left:40%; color: white;" href="/admin/product" class="btn btn-dark">Go Back</a>
+                <a style="margin-left:40%; " href="/admin/product" class="btn btn-danger">Go Back</a>
               </form>
                </div>
           </div>
