--- a/views/userView/productCategory.ejs
+++ b/views/userView/productCategory.ejs
@@ -66,7 +66,7 @@
           </div>
           <nav class="main-menu mobile-menu">
             <ul>
-              <li><a class="active" href="/">Home</a></li>
+              <li><a href="/">Home</a></li>
               <li>
                 <a href="/login">Shop</a>
                 <!-- <ul class="sub-menu">
@@ -86,129 +86,6 @@
 
     <!-- Header End -->
 
-    <!-- Hero Slider Begin -->
-    <section class="hero-slider">
-      <div class="hero-items owl-carousel">
-        <div class="single-slider-item set-bg" data-setbg="/img/slider-1.jpg">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <h1>2024</h1>
-                <h2>Finer Threads</h2>
-                <a href="#" class="primary-btn">See More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="single-slider-item set-bg" data-setbg="/img/slider-2.jpg">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <h1>2024</h1>
-                <h2>Finer Threads</h2>
-                <a href="#" class="primary-btn">See More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="single-slider-item set-bg" data-setbg="/img/slider-3.jpg">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <h1>2024</h1>
-                <h2>Finer Threads</h2>
-                <a href="#" class="primary-btn">See More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Hero Slider End -->
-
-    <!-- Features Section Begin -->
-    <section class="features-section spad">
-      <div class="features-ads">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="single-features-ads first">
-                <img src="img/icons/f-delivery.png" alt="" />
-                <h4>Free shipping</h4>
-                <p>
-                  Fusce urna quam, euismod sit amet mollis quis, vestibulum quis
-                  velit. Vesti bulum mal esuada aliquet libero viverra cursus.
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="single-features-ads second">
-                <img src="/img/icons/coin.png" alt="" />
-                <h4>100% Money back</h4>
-                <p>
-                  Urna quam, euismod sit amet mollis quis, vestibulum quis
-                  velit. Vesti bulum mal esuada aliquet libero viverra cursus.
-                </p>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="single-features-ads">
-                <img src="/img/icons/chat.png" alt="" />
-                <h4>Online support 24/7</h4>
-                <p>
-                  Urna quam, euismod sit amet mollis quis, vestibulum quis
-                  velit. Vesti bulum mal esuada aliquet libero viverra cursus.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Features Box -->
-      <div class="features-box">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="row">
-                <div class="col-lg-12">
-                  <div class="single-box-item first-box">
-                    <img src="/img/f-box-1.jpg" alt="" />
-                    <div class="box-text">
-                      <span class="trend-year">2019 Party</span>
-                      <h2>Jewelry</h2>
-                      <span class="trend-alert">Trend Allert</span>
-                      <a href="#" class="primary-btn">See More</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="single-box-item second-box">
-                    <img src="/img/f-box-2.jpg" alt="" />
-                    <div class="box-text">
-                      <span class="trend-year">2019 Trend</span>
-                      <h2>Footwear</h2>
-                      <span class="trend-alert">Bold & Black</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="single-box-item large-box">
-                <img src="/img/f-box-3.jpg" alt="" />
-                <div class="box-text">
-                  <span class="trend-year">2019 Party</span>
-                  <h2>Collection</h2>
-                  <div class="trend-alert">Trend Allert</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Features Section End -->
-
     <!-- Latest Product Begin -->
     <section class="latest-products spad">
       <div class="container">
@@ -216,7 +93,7 @@
           <div class="row">
             <div class="col-lg-12 text-center">
               <div class="section-title">
-                <h2>Latest Products</h2>
+                <h4>Product Category</h4>
                 <hr />
                 <ul class="product-controls">
                   <% for(let i of category) {%>
@@ -258,63 +135,6 @@
       </div>
     </section>
     <!-- Latest Product End -->
-
-    <!-- Lookbok Section Begin -->
-    <section class="lookbok-section">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-4 offset-lg-1">
-            <div class="lookbok-left">
-              <div class="section-title">
-                <h2>2019 <br />#lookbook</h2>
-              </div>
-              <p>
-                Fusce urna quam, euismod sit amet mollis quis, vestibulum quis
-                velit. Vestibulum malesuada aliquet libero viverra cursus.
-                Aliquam erat volutpat. Morbi id dictum quam, ut commodo lorem.
-                In at nisi nec arcu porttitor aliquet vitae at dui. Sed
-                sollicitudin nulla non leo viverra scelerisque. Phasellus
-                facilisis lobortis metus, sit amet viverra lectus finibus ac.
-                Aenean non felis dapibus, placerat libero auctor, ornare ante.
-                Morbi quis ex eleifend, sodales nulla vitae, scelerisque ante.
-                Nunc id vulputate dui. Suspendisse consectetur rutrum metus nec
-                scelerisque. s
-              </p>
-              <a href="#" class="primary-btn look-btn">See More</a>
-            </div>
-          </div>
-          <div class="col-lg-5 offset-lg-1">
-            <div class="lookbok-pic">
-              <img src="/img/lookbok.jpg" alt="" />
-              <div class="pic-text">fashion</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Lookbok Section End -->
-
-    <!-- Logo Section Begin -->
-    <div class="logo-section spad">
-      <div class="logo-items owl-carousel">
-        <div class="logo-item">
-          <img src="/img/logos/logo-1.png" alt="" />
-        </div>
-        <div class="logo-item">
-          <img src="/img/logos/logo-2.png" alt="" />
-        </div>
-        <div class="logo-item">
-          <img src="/img/logos/logo-3.png" alt="" />
-        </div>
-        <div class="logo-item">
-          <img src="/img/logos/logo-4.png" alt="" />
-        </div>
-        <div class="logo-item">
-          <img src="/img/logos/logo-5.png" alt="" />
-        </div>
-      </div>
-    </div>
-    <!-- Logo Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section spad">
