forgot password and resend otp added

--- a/views/userView/changePassword.ejs
+++ b/views/userView/changePassword.ejs
@@ -49,97 +49,62 @@
                 <div class="logo">
                     <a href="/"><img src="img/logo.png" alt=""></a>
                 </div>
-                <!-- <div class="header-right">
-                    <img src="img/icons/search.png" alt="" class="search-trigger">
-                    <img src="img/icons/man.png" alt="">
-                    <a href="#">
-                        <img src="img/icons/bag.png" alt="">
-                        <span>2</span>
-                    </a>
-                </div>
-                <div class="user-access">
-                    <a href="#">Register</a>
-                    <a href="#" class="in">Sign in</a>
-                </div>
-                <nav class="main-menu mobile-menu">
-                    <ul>
-                        <li><a class="active" href="./index.html">Home</a></li>
-                        <li><a href="./categories.html">Shop</a>
-                            <ul class="sub-menu">
-                                <li><a href="product-page.html">Product Page</a></li>
-                                <li><a href="shopping-cart.html">Shopping Card</a></li>
-                                <li><a href="check-out.html">Check out</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="./product-page.html">About</a></li>
-                        <li><a href="./check-out.html">Blog</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
-                    </ul>
-                </nav> -->
             </div>
         </div>
     </header>
 
 
 
-
-    <!-- Page Content -->
-
-  <section class="py-5 bg-light">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
-
-              <div class="mb-md-5 mt-md-4 pb-3">
-                <% if(error){ %>
-                    <p style="color: red;" id="errMsg"><%=error%></p>  
-                    <%}else{%>
-                    <p id="successID" style="display:block; color: brown;"><%=success%></p>
-                    <%}%>
-                <form action="/home" method="post">
-
-                  <h2 class="fw-bold mb-2 ">User Login</h2>
-                  <p class="text-white-50 mb-5">Please enter your login and password!</p>
-
-                  <div class="form-outline form-white mb-4">
-                    <input type="text" placeholder="Username" id="typetext" name="username"
-                      class="form-control form-control-lg" />
-                    <!-- <span>
-                      <%#= invalidunam %>
-                    </span> -->
-                  </div>
-
-                  <div class="form-outline form-white mb-4">
-                    <input type="password" placeholder="Password" id="id_password" name="password" style="position:absolute; width: 78%;" class="form-control form-control-lg" />
-                    <i class="far fa-eye showpass" id="togglePassword" ></i>
-                  </div>
-                  <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-                  <div>
-                    <br>
-                    <p class="mb-0 text-white-50">Forgot password? <a href="/forgetPassword"
-                        class="text-white-50 fw-bold" ><u>Click here</u></a></p>
-                    <p class="mb-0 text-white-50">Don't have an account? <a href="/signup" style="text-decoration: none;"
-                        class="text-white-50 fw-bold">Sign Up</a>
-                    </p>
-                  </div>
-                </form>
-              </div>
+    <body>
+        <!-- Topbar Start -->
+        <div class="container-fluid">
+        <h5 style="padding-left:40%">Update your Password</h5>
+        <div class="w-25" style="margin-left: 40%">
+        
+        
+        <p></p>
+          <form action="/updatePassword" method="post">
+            <!-- New Password Input -->
+            <div class="form-outline mb-4">
+            <label class="form-label" for="form2Example1">New Password<sup style="color: red;">*</sup></label>
+            <input type="password" id="Password1" class="form-control" name="Password1" 
+            value="" placeholder="Enter new password" onkeyup="validatePassword1()">
+            <span id="pass1-error"></span>
+            <br><br>
+            <label class="form-label" for="form2Example1">Confirm Password<sup style="color: red;">*</sup></label>
+              <input
+                type="password"
+                id="Password2"
+                class="form-control"
+                name="Password2" placeholder="Re enter the password"
+                 onkeyup="validatePassword2()"
+              />
+              <span id="pass2-error"></span>
+    
             </div>
-          </div>
+            <span id="submitOTP-error"></span>
+            <br>
+            <%#if(fpOTP){%>
+              <p id="invalidotp" style="color: red; text-align: center;"><%#=fpOTP %></p>
+            <%#}%>
+            
+            <!-- Submit button -->
+            <button onclick="return validateForm()" type="submit" class="btn btn-primary btn-block mb-4">
+              Update Password
+            </button>
+    <br>
+    
+          </form>
+          <!-- <div><button>Resend OTP</button>
+    <p>in 1min</p></div> -->
         </div>
-      </div>
-  </section>
+    </body>
 
 
 
 
 
-
-
-
-
+       
       <!-- Footer Section Begin -->
       <footer class="footer-section spad">
         <div class="container">
@@ -234,25 +199,84 @@
             },3000)
 
 
-setTimeout(()=>{
-  const fade1=document.getElementById("successID");
-  fade1.style.display='none'
-},5000)
+            setTimeout(()=>{
+            const fade1=document.getElementById("successID");
+            fade1.style.display='none'
+            },5000)
     </script>
         <script>
 
-            const togglePassword = document.querySelector('#togglePassword');
-    
-            const password = document.querySelector('#id_password');
-    
-            togglePassword.addEventListener('click', function (e) {
-                // toggle the type attribute
-                const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
-                password.setAttribute('type', type);
-                // toggle the eye slash icon
-                this.classList.toggle('fa-eye-slash');
-            });
-            </script>    
+/*    PASSWORD VALIDATION     */
+var pass1Error = document.getElementById("pass1-error");
+var pass2Error = document.getElementById("pass2-error");
+var submitOTPError = document.getElementById("submitOTP-error");
+// var invalidOTP = document.getElementById("invalidotp");
+//     invalidOTP.style.display='block';
+//     setTimeout(()=>{
+//       invalidOTP.style.display="none"
+//     },2000)
+
+function validatePassword1() {
+  var pass1 = document.getElementById("Password1").value;
+  if (pass1.length == 0) {
+    pass1Error.style.color = "red";
+    pass1Error.innerHTML = "Please enter the password";
+    return false;
+  }
+  else if (!pass1.match(/^(?=.*?[0-9])(?=.*?[a-z])(?=(.*?[^0-9A-Za-z]){1}).{8,32}$/)) {
+    pass1Error.style.color = "red";
+     pass1Error.innerHTML = "Minimum 8 characters (alphanumeric + special characters).";
+     return false;
+}
+  pass1Error.innerHTML = "valid";
+
+  if ((pass1Error.innerHTML == "valid")) {
+pass1Error.style.color = "green";
+} else {
+pass1Error.style.color = "red";
+}
+  return true;
+}
+
+function validatePassword2() {
+  var pass2 = document.getElementById("Password2").value;
+  var pass1 = document.getElementById("Password1").value
+  if (pass2.length == 0) {
+    pass2Error.style.color = "red";
+    pass2Error.innerHTML = "Please enter the password";
+    return false;
+  }
+  else if (!pass2.match(/^(?=.*?[0-9])(?=.*?[a-z])(?=(.*?[^0-9A-Za-z]){1}).{8,32}$/)) {
+    pass2Error.style.color = "red";
+     pass2Error.innerHTML = "Minimum 8 characters (alphanumeric + special characters).";
+     return false;
+}
+  else if(pass2!=pass1){
+    pass2Error.style.color = "red";
+  pass2Error.innerHTML = "Both password should match";
+  return false;
+}
+  pass2Error.innerHTML = "valid";
+  if ((pass2Error.innerHTML == "valid")) {
+pass2Error.style.color = "green";
+} else {
+pass2Error.style.color = "red";
+}
+  return true;
+}
+
+function validateForm() {
+  if (!validatePassword1()||!validatePassword2()) {
+    submitOTPError.style.display = "block";
+    submitOTPError.innerHTML = "Enter both fields";
+    setTimeout(() => {
+      submitOTPError.style.display = "none";
+    }, 2000);
+    return false;
+  } 
+}
+</script>
+
 </body>
 
 </html>
