--- a/views/userView/forgotPassword.ejs
+++ b/views/userView/forgotPassword.ejs
@@ -49,97 +49,55 @@
                 <div class="logo">
                     <a href="/"><img src="img/logo.png" alt=""></a>
                 </div>
-                <!-- <div class="header-right">
-                    <img src="img/icons/search.png" alt="" class="search-trigger">
-                    <img src="img/icons/man.png" alt="">
-                    <a href="#">
-                        <img src="img/icons/bag.png" alt="">
-                        <span>2</span>
-                    </a>
-                </div>
-                <div class="user-access">
-                    <a href="#">Register</a>
-                    <a href="#" class="in">Sign in</a>
-                </div>
-                <nav class="main-menu mobile-menu">
-                    <ul>
-                        <li><a class="active" href="./index.html">Home</a></li>
-                        <li><a href="./categories.html">Shop</a>
-                            <ul class="sub-menu">
-                                <li><a href="product-page.html">Product Page</a></li>
-                                <li><a href="shopping-cart.html">Shopping Card</a></li>
-                                <li><a href="check-out.html">Check out</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="./product-page.html">About</a></li>
-                        <li><a href="./check-out.html">Blog</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
-                    </ul>
-                </nav> -->
             </div>
         </div>
     </header>
 
 
+    <body>
+        <!-- Topbar Start -->
+        <div class="container">
 
-
-    <!-- Page Content -->
-
-  <section class="py-5 bg-light">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
-            <div class="card-body p-5 text-center">
-
-              <div class="mb-md-5 mt-md-4 pb-3">
-                <% if(error){ %>
-                    <p style="color: red;" id="errMsg"><%=error%></p>  
-                    <%}else{%>
-                    <p id="successID" style="display:block; color: brown;"><%=success%></p>
-                    <%}%>
-                <form action="/home" method="post">
-
-                  <h2 class="fw-bold mb-2 ">User Login</h2>
-                  <p class="text-white-50 mb-5">Please enter your login and password!</p>
-
-                  <div class="form-outline form-white mb-4">
-                    <input type="text" placeholder="Username" id="typetext" name="username"
-                      class="form-control form-control-lg" />
-                    <!-- <span>
-                      <%#= invalidunam %>
-                    </span> -->
-                  </div>
-
-                  <div class="form-outline form-white mb-4">
-                    <input type="password" placeholder="Password" id="id_password" name="password" style="position:absolute; width: 78%;" class="form-control form-control-lg" />
-                    <i class="far fa-eye showpass" id="togglePassword" ></i>
-                  </div>
-                  <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-                  <div>
-                    <br>
-                    <p class="mb-0 text-white-50">Forgot password? <a href="/forgetPassword"
-                        class="text-white-50 fw-bold" ><u>Click here</u></a></p>
-                    <p class="mb-0 text-white-50">Don't have an account? <a href="/signup" style="text-decoration: none;"
-                        class="text-white-50 fw-bold">Sign Up</a>
-                    </p>
-                  </div>
-                </form>
-              </div>
+        <h5 style="padding-left:40%">Please enter your email to confirm</h5>
+        <div class="w-25" style="margin-left: 40%">
+        
+        
+        <p></p>
+          <form action="/authEmail" method="post">
+            <!-- OTP input -->
+            <div class="form-outline mb-4">
+            <label class="form-label" for="form2Example1">Email address<sup style="color: red;">*</sup></label>
+              <input
+                type="email"
+                id="email"
+                class="form-control"
+                name="email" placeholder="Enter your email address"
+             onkeyup="validEmail()"
+              />
+              <span id="validEmailError"></span>
+    
             </div>
+            <span id="submitError"></span>
+            <br>
+            <%if(error){%>
+              <p id="regEmail" style="color: red; text-align: center;"><%=error %></p>
+            <%}%>
+            
+            <!-- Submit button -->
+            <button onclick="return validateForm()" type="submit" class="btn btn-primary btn-block mb-4">
+              Continue
+            </button>
+             <br>
+    
+          </form>
+          <div>
           </div>
         </div>
-      </div>
-  </section>
 
+        </div>
+        </body>
 
-
-
-
-
-
-
-
+        
       <!-- Footer Section Begin -->
       <footer class="footer-section spad">
         <div class="container">
@@ -234,10 +192,10 @@
             },3000)
 
 
-setTimeout(()=>{
-  const fade1=document.getElementById("successID");
-  fade1.style.display='none'
-},5000)
+            setTimeout(()=>{
+            const fade1=document.getElementById("successID");
+            fade1.style.display='none'
+            },5000)
     </script>
         <script>
 
@@ -251,7 +209,54 @@ setTimeout(()=>{
                 password.setAttribute('type', type);
                 // toggle the eye slash icon
                 this.classList.toggle('fa-eye-slash');
+                
             });
+
+
+
+
+             /*    EMAIL VALIDATION     */
+    var emailError = document.getElementById("validEmailError");
+    var submitError = document.getElementById("")
+    var invalidEmail = document.getElementById("regEmail");
+        invalidEmail.style.display='block';
+        setTimeout(()=>{
+          invalidEmail.style.display="none"
+        },2000)
+  
+    function validEmail() {
+      var email = document.getElementById("email").value;
+      if (email.length === 0) {
+        emailError.style.color='red';
+        emailError.innerHTML = "Email is required";
+        return false;
+        } 
+        else if (!email.match(/^[A-Za-z\._\-[0-9]*[@][A-Za-z]*[\.][a-z]{2,4}$/)) {
+          emailError.style.color='red';
+        emailError.innerHTML = "Proper email format is required";
+        return false;
+      }
+      emailError.innerHTML = "valid";
+      
+      if ((emailError.innerHTML == "valid")) {
+    emailError.style.color = "green";
+  }else {
+    emailError.style.color = "red";
+  }
+      return true;
+    }
+
+    function validateForm() {
+  if (!validEmail() ) {
+    submitError.style.display = "block";
+    submitError.innerHTML = "Please enter valid email address";
+    setTimeout(() => {
+      submitError.style.display = "none";
+    }, 2000);
+    return false;
+  }
+}
+
             </script>    
 </body>
 
