Product Magnifire Added

--- a/views/userView/userProductPage.ejs
+++ b/views/userView/userProductPage.ejs
@@ -79,6 +79,30 @@
           </nav>
         </div>
       </div>
+      <style>
+        .product-image-container {
+          position: relative;
+          display: inline-block;
+          margin-right: 20px; /* Adjust spacing between images */
+        }
+
+        .product-image {
+          width: 100%;
+          vertical-align: top;
+        }
+
+        .magnifier {
+          width: 250px; /* Adjust as needed */
+          height: 250px; /* Adjust as needed */
+          position: absolute;
+          border: 2px solid #000;
+          cursor: none;
+          display: none;
+          pointer-events: none;
+          background-size: 800px 800px;
+          background-repeat: no-repeat;
+        }
+    </style>
     </header>
 
     <!-- Header End -->
@@ -93,48 +117,52 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="product-slider owl-carousel">
-              <div class="product-img">
-                <figure>
+              <div class="product-img product-image-container">
+                <figure class="image-magnifier">
                   <img
                     src="<%=productDetails.image[0] %>"
                     alt="<%=productDetails.name %>"
                     width="440px"
                     height="600px"
+                    class="product-image"
                   />
-                  <!-- <div class="p-status">new</div> -->
+                  <div class="magnifier"></div>
                 </figure>
               </div>
-              <div class="product-img">
-                <figure>
+              <div class="product-img product-image-container">
+                <figure class="image-magnifier">
                   <img
                     src="<%=productDetails.image[1] %>"
                     alt="<%=productDetails.name %>"
-                    width="450px"
+                    width="440px"
                     height="600px"
+                    class="product-image"
                   />
-                  <!-- <div class="p-status">new</div> -->
+                  <div class="magnifier"></div>
                 </figure>
               </div>
-              <div class="product-img">
-                <figure>
+              <div class="product-img product-image-container">
+                <figure class="image-magnifier">
                   <img
                     src="<%=productDetails.image[2] %>"
                     alt="<%=productDetails.name %>"
-                    width="450px"
+                    width="440px"
                     height="600px"
+                    class="product-image"
                   />
-                  <!-- <div class="p-status">new</div> -->
+                  <div class="magnifier"></div>
                 </figure>
               </div>
-              <div class="product-img">
-                <figure>
+              <div class="product-img product-image-container">
+                <figure class="image-magnifier">
                   <img
                     src="<%=productDetails.image[3] %>"
                     alt="<%=productDetails.name %>"
-                    width="450px"
+                    width="440px"
                     height="600px"
+                    class="product-image"
                   />
-                  <!-- <div class="p-status">new</div> -->
+                  <div class="magnifier"></div>
                 </figure>
               </div>
             </div>
@@ -313,5 +341,54 @@
     <script src="/js/jquery.nice-select.min.js"></script>
     <script src="/js/mixitup.min.js"></script>
     <script src="/js/main.js"></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        var magnifiers = document.querySelectorAll(".image-magnifier");
+
+        magnifiers.forEach(function (element) {
+          var img = element.querySelector(".product-image");
+          var magnifier = element.querySelector(".magnifier");
+          var magnifierWidth = magnifier.offsetWidth;
+          var magnifierHeight = magnifier.offsetHeight;
+          var ratio = 2; // Adjust as needed for magnification level
+
+          img.addEventListener("mousemove", function (e) {
+            var pos = getCursorPos(e, img);
+            magnify(e, pos);
+          });
+
+          function getCursorPos(e, img) {
+            var a, x = 0, y = 0;
+            e = e || window.event;
+            a = img.getBoundingClientRect();
+            x = e.pageX - a.left;
+            y = e.pageY - a.top;
+            x = x - window.pageXOffset;
+            y = y - window.pageYOffset;
+            return {x : x, y : y};
+          }
+
+          function magnify(e, pos) {
+            var x, y;
+            x = pos.x - (magnifierWidth / 2);
+            y = pos.y - (magnifierHeight / 2);
+            magnifier.style.left = x + "px";
+            magnifier.style.top = y + "px";
+            magnifier.style.backgroundImage = "url('" + img.src + "')";
+            magnifier.style.backgroundPosition = "-" + (pos.x * ratio - magnifierWidth / 2) + "px -" + (pos.y * ratio - magnifierHeight / 2) + "px";
+          }
+
+          img.addEventListener("mouseenter", function () {
+            magnifier.style.display = "block";
+          });
+
+          img.addEventListener("mouseleave", function () {
+            magnifier.style.display = "none";
+          });
+        });
+      });
+  </script>
+
   </body>
 </html>
